--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <br/>
 <br/>
 <div style="width:1200px; margin:0 auto;">
-       <img src=https://raw.githubusercontent.com/ronandersondesigns/graphicdesigner/gh-pages/images/TshirtDesign_HiRez.jpg style="max-width: 1800px; width:100%; height: auto; margin-right: 30px;" />
+       <img src=https://github.com/ronandersondesigns/portfolio/blob/gh-pages/images/PhoneTemplateDesign1.png?raw=true style="max-width: 1800px; width:100%; height: auto; margin-right: 30px;" />
      </li>
 </div>
   </body>
